--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/mojo.html">Papas con mojo</a>
+    <ul>
+        <li><a href="recipes/mojo.html">Papas con mojo</a></li>
+        <li><a href="recipes/fish.html">Fish</a></li>
+        <li><a href="recipes/brocoli.html">Brocoli</a></li>
+    </ul>
 </body>
 </html>
